[gd_scene load_steps=9 format=2]

[ext_resource path="res://bestia_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/GameUI/AttackList/AttackList.gd" type="Script" id=2]
[ext_resource path="res://scenes/GameUI/AttackList/sword-wound.svg" type="Texture" id=3]
[ext_resource path="res://fonts/opensans_semibold_headline.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/GameUI/close-24px.svg" type="Texture" id=5]
[ext_resource path="res://scenes/GameUI/backspace-24px.svg" type="Texture" id=6]
[ext_resource path="res://scenes/GameUI/AttackList/AttackDescription/AttackDescription.tscn" type="PackedScene" id=7]
[ext_resource path="res://audio/fx/click3.wav" type="AudioStream" id=8]

[node name="AttackList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 348.0
margin_top = 110.0
margin_right = 932.0
margin_bottom = 610.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AttackPanel" type="Panel" parent="CenterContainer/HBoxContainer"]
editor/display_folded = true
margin_right = 290.0
margin_bottom = 500.0
rect_min_size = Vector2( 290, 500 )

[node name="BorderMargin" type="MarginContainer" parent="CenterContainer/HBoxContainer/AttackPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Attacks" type="VBoxContainer" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 280.0
margin_bottom = 490.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="HBoxContainer" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks"]
editor/display_folded = true
margin_right = 270.0
margin_bottom = 31.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Title"]
margin_right = 30.0
margin_bottom = 31.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Title" type="Label" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Title"]
margin_left = 34.0
margin_right = 246.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 4 )
text = "Attacks"

[node name="Close" type="TextureButton" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Title"]
margin_left = 250.0
margin_right = 270.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Search" type="HBoxContainer" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks"]
editor/display_folded = true
margin_top = 35.0
margin_right = 270.0
margin_bottom = 65.0

[node name="Search" type="LineEdit" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Search"]
margin_right = 235.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="ClearButton" type="Button" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Search"]
margin_left = 239.0
margin_right = 270.0
margin_bottom = 30.0
icon = ExtResource( 6 )
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks"]
margin_top = 69.0
margin_right = 270.0
margin_bottom = 480.0
size_flags_vertical = 3

[node name="AttackRows" type="VBoxContainer" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/ScrollContainer"]
margin_right = 270.0
margin_bottom = 411.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AttackDescription" parent="CenterContainer/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 294.0
margin_right = 584.0
margin_bottom = 500.0
rect_min_size = Vector2( 290, 500 )

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Fx"
[connection signal="pressed" from="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Title/Close" to="." method="_on_Close_pressed"]
[connection signal="text_changed" from="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Search/Search" to="." method="_on_Search_text_changed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Search/ClearButton" to="." method="_on_ClearButton_pressed"]
