[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/bestia_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/AttackList/AttackList.gd" type="Script" id=2]
[ext_resource path="res://UI/AttackList/sword-wound.svg" type="Texture" id=3]
[ext_resource path="res://shared/fonts/OpenSans_SemiboldHeadline.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/close-24px.svg" type="Texture" id=5]
[ext_resource path="res://UI/backspace-24px.svg" type="Texture" id=6]
[ext_resource path="res://shared/audio/fx/click3.wav" type="AudioStream" id=7]

[node name="AttackList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.05261
margin_top = -1.05264
margin_right = -1.05261
margin_bottom = -1.05261
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 495.0
margin_top = 110.0
margin_right = 785.0
margin_bottom = 610.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AttackPanel" type="Panel" parent="CenterContainer/HBoxContainer"]
margin_right = 290.0
margin_bottom = 500.0
rect_min_size = Vector2( 290, 500 )

[node name="BorderMargin" type="MarginContainer" parent="CenterContainer/HBoxContainer/AttackPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attacks" type="VBoxContainer" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 280.0
margin_bottom = 490.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="HBoxContainer" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks"]
margin_right = 270.0
margin_bottom = 31.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Title"]
margin_right = 30.0
margin_bottom = 31.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Title" type="Label" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Title"]
margin_left = 34.0
margin_right = 246.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 4 )
text = "Attacks"

[node name="Close" type="TextureButton" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Title"]
margin_left = 250.0
margin_right = 270.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Search" type="HBoxContainer" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks"]
margin_top = 35.0
margin_right = 270.0
margin_bottom = 65.0

[node name="Search" type="LineEdit" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Search"]
margin_right = 235.0
margin_bottom = 30.0
size_flags_horizontal = 3
placeholder_text = "Search"

[node name="ClearButton" type="Button" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Search"]
margin_left = 239.0
margin_right = 270.0
margin_bottom = 30.0
icon = ExtResource( 6 )
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks"]
margin_top = 69.0
margin_right = 270.0
margin_bottom = 480.0
size_flags_vertical = 3

[node name="AttackRows" type="VBoxContainer" parent="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/ScrollContainer"]
margin_right = 270.0
margin_bottom = 411.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Fx"
[connection signal="mouse_entered" from="." to="." method="_on_AttackList_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_AttackList_mouse_exited"]
[connection signal="visibility_changed" from="." to="." method="_on_AttackList_visibility_changed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Title/Close" to="." method="_on_Close_pressed"]
[connection signal="text_changed" from="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Search/Search" to="." method="_on_Search_text_changed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/AttackPanel/BorderMargin/Attacks/Search/ClearButton" to="." method="_on_ClearButton_pressed"]
